# UniversalFFT

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  Makefile  README.md  codemeta.json  env.yml  mkdocs.yml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: ci.yml
c/: Makefile  demo.c  universalfft.c  universalfft.h
cpp/: Makefile  demo.cpp  universalfft.hpp
cuda/: Makefile  demo.cu  universalfft.cu  universalfft.cuh
docs/: gen_figures.py  index.md  requirements.txt
docs/css/: universalfft.css
docs/dev/: api_index.md
docs/examples/: cross_language.md  filter.md  impulse_response.md  index.md  spectrum.md
docs/user/: authors.md  citing.md  conventions.md  install.md
document/: softwarex_draft.docx  softwarex_draft.md  softwarex_draft.tex
examples/cross_language_demo/: reference_signal.py  run_all.py
fortran/: Makefile  demo.f90  universalfft.f90
idl/: universalfft.pro
js/: demo.js  package.json  test.js  universalfft.js
julia/: Project.toml  demo.jl
julia/src/: UniversalFFT.jl
julia/test/: runtests.jl
matlab/: ufft_cc_forward.m  ufft_cc_inverse.m  ufft_cd_forward.m  ufft_cd_inverse.m  ufft_demo.m  ufft_filter.m  ufft_freqs.m
octave/: ufft_demo_octave.m  universalfft.m
python/: setup.py
python/universalfft/: __init__.py  core.py  utils.py
r/: ufft_demo.R  universalfft.R
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
tests/cross_language/: generate_reference.py  validate_all.py
tests/data/: cosine_vectors.npz  filter_vectors.npz  impulse_response_vectors.npz
tests/python/: conftest.py  test_core.py  (+1 more)
(+13 files in other folders)
